charts-kustomize/zwave/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zwave
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: zwave
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: ingress-nginx
            io.kubernetes.pod.namespace: default
        - matchLabels:
            app.kubernetes.io/instance: home-assistant
            io.kubernetes.pod.namespace: default
        - matchLabels:
            app.kubernetes.io/instance: traefik-default
            io.kubernetes.pod.namespace: default
      toPorts:
        - ports:
            - port: "80"
            - port: "3000"
  egress:
    - toEntities:
        - all
